--- a/Project_2_VQE_Molecules/H4_complete.ipynb
+++ b/Project_2_VQE_Molecules/H4_complete.ipynb
@@ -99,7 +99,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f08250faf98>"
+       "<matplotlib.legend.Legend at 0x7eff968d4198>"
       ]
      },
      "execution_count": 3,
@@ -148,99 +148,103 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-0.8823205468513727 [] +\n",
-      "-0.03405838502250318 [X0 X1 Y2 Y3] +\n",
-      "-0.0340583850225032 [X0 X1 Y4 Y5] +\n",
-      "-0.023093664326496458 [X0 X1 Y6 Y7] +\n",
-      "0.03405838502250318 [X0 Y1 Y2 X3] +\n",
-      "0.0340583850225032 [X0 Y1 Y4 X5] +\n",
-      "0.023093664326496458 [X0 Y1 Y6 X7] +\n",
-      "0.011573113480196618 [X0 Z1 X2 X4 Z5 X6] +\n",
-      "0.035257520327667304 [X0 Z1 X2 X5 Z6 X7] +\n",
-      "0.035257520327667304 [X0 Z1 X2 Y5 Z6 Y7] +\n",
-      "0.011573113480196622 [X0 Z1 Y2 Y4 Z5 X6] +\n",
-      "-0.03525752032766731 [X0 Z1 Z2 X3 Y4 Z5 Z6 Y7] +\n",
-      "-0.02368440684747069 [X0 Z1 Z2 X3 X5 X6] +\n",
-      "0.03525752032766731 [X0 Z1 Z2 Y3 Y4 Z5 Z6 X7] +\n",
-      "-0.02368440684747069 [X0 Z1 Z2 Y3 Y5 X6] +\n",
-      "0.03405838502250318 [Y0 X1 X2 Y3] +\n",
-      "0.0340583850225032 [Y0 X1 X4 Y5] +\n",
-      "0.023093664326496458 [Y0 X1 X6 Y7] +\n",
-      "-0.03405838502250318 [Y0 Y1 X2 X3] +\n",
-      "-0.0340583850225032 [Y0 Y1 X4 X5] +\n",
-      "-0.023093664326496458 [Y0 Y1 X6 X7] +\n",
-      "0.011573113480196622 [Y0 Z1 X2 X4 Z5 Y6] +\n",
-      "0.011573113480196618 [Y0 Z1 Y2 Y4 Z5 Y6] +\n",
-      "0.035257520327667304 [Y0 Z1 Y2 X5 Z6 X7] +\n",
-      "0.035257520327667304 [Y0 Z1 Y2 Y5 Z6 Y7] +\n",
-      "0.03525752032766731 [Y0 Z1 Z2 X3 X4 Z5 Z6 Y7] +\n",
-      "-0.02368440684747069 [Y0 Z1 Z2 X3 X5 Y6] +\n",
-      "-0.03525752032766731 [Y0 Z1 Z2 Y3 X4 Z5 Z6 X7] +\n",
-      "-0.02368440684747069 [Y0 Z1 Z2 Y3 Y5 Y6] +\n",
-      "0.14728582382955893 [Z0] +\n",
-      "0.10715401025424195 [Z0 Z1] +\n",
-      "0.07213887045360737 [Z0 Z2] +\n",
-      "0.10619725547611056 [Z0 Z3] +\n",
-      "0.0721388704536074 [Z0 Z4] +\n",
-      "0.10619725547611059 [Z0 Z5] +\n",
-      "0.08409543193051378 [Z0 Z6] +\n",
-      "0.10718909625701023 [Z0 Z7] +\n",
-      "-0.02368440684747069 [X1 X2 X4 Z5 Z6 X7] +\n",
-      "-0.03525752032766731 [X1 X2 Y5 Y6] +\n",
-      "-0.02368440684747069 [X1 Y2 Y4 Z5 Z6 X7] +\n",
-      "0.03525752032766731 [X1 Y2 Y5 X6] +\n",
-      "0.035257520327667304 [X1 Z2 X3 X4 Z5 X6] +\n",
-      "0.035257520327667304 [X1 Z2 X3 Y4 Z5 Y6] +\n",
-      "0.011573113480196618 [X1 Z2 X3 X5 Z6 X7] +\n",
-      "0.011573113480196622 [X1 Z2 Y3 Y5 Z6 X7] +\n",
-      "-0.02368440684747069 [Y1 X2 X4 Z5 Z6 Y7] +\n",
-      "0.03525752032766731 [Y1 X2 X5 Y6] +\n",
-      "-0.02368440684747069 [Y1 Y2 Y4 Z5 Z6 Y7] +\n",
-      "-0.03525752032766731 [Y1 Y2 X5 X6] +\n",
-      "0.011573113480196622 [Y1 Z2 X3 X5 Z6 Y7] +\n",
-      "0.035257520327667304 [Y1 Z2 Y3 X4 Z5 X6] +\n",
-      "0.035257520327667304 [Y1 Z2 Y3 Y4 Z5 Y6] +\n",
-      "0.011573113480196618 [Y1 Z2 Y3 Y5 Z6 Y7] +\n",
-      "0.1472858238295589 [Z1] +\n",
-      "0.10619725547611056 [Z1 Z2] +\n",
-      "0.07213887045360737 [Z1 Z3] +\n",
-      "0.10619725547611059 [Z1 Z4] +\n",
-      "0.0721388704536074 [Z1 Z5] +\n",
-      "0.10718909625701023 [Z1 Z6] +\n",
-      "0.08409543193051378 [Z1 Z7] +\n",
-      "-0.024298400891945123 [X2 X3 Y4 Y5] +\n",
-      "-0.0382797678925214 [X2 X3 Y6 Y7] +\n",
-      "0.024298400891945123 [X2 Y3 Y4 X5] +\n",
-      "0.0382797678925214 [X2 Y3 Y6 X7] +\n",
-      "0.024298400891945123 [Y2 X3 X4 Y5] +\n",
-      "0.0382797678925214 [Y2 X3 X6 Y7] +\n",
-      "-0.024298400891945123 [Y2 Y3 X4 X5] +\n",
-      "-0.0382797678925214 [Y2 Y3 X6 X7] +\n",
-      "0.020729283262210442 [Z2] +\n",
-      "0.10799421374369346 [Z2 Z3] +\n",
+      "-0.8823205468513752 [] +\n",
+      "-0.034058385022492754 [X0 X1 Y2 Y3] +\n",
+      "-0.0340583850225138 [X0 X1 Y4 Y5] +\n",
+      "-0.023093664326494255 [X0 X1 Y6 Y7] +\n",
+      "0.034058385022492754 [X0 Y1 Y2 X3] +\n",
+      "0.0340583850225138 [X0 Y1 Y4 X5] +\n",
+      "0.023093664326494255 [X0 Y1 Y6 X7] +\n",
+      "-0.011573113480190935 [X0 Z1 X2 X4 Z5 X6] +\n",
+      "-0.035257520327649984 [X0 Z1 X2 X5 Z6 X7] +\n",
+      "-0.035257520327649984 [X0 Z1 X2 Y5 Z6 Y7] +\n",
+      "-0.011573113480190928 [X0 Z1 Y2 Y4 Z5 X6] +\n",
+      "0.03525752032764998 [X0 Z1 Z2 X3 Y4 Z5 Z6 Y7] +\n",
+      "0.023684406847459046 [X0 Z1 Z2 X3 X5 X6] +\n",
+      "-0.03525752032764998 [X0 Z1 Z2 Y3 Y4 Z5 Z6 X7] +\n",
+      "0.023684406847459046 [X0 Z1 Z2 Y3 Y5 X6] +\n",
+      "-4.046981332494459e-08 [X0 Z1 Z2 Z3 Z4 Z5 X6] +\n",
+      "0.034058385022492754 [Y0 X1 X2 Y3] +\n",
+      "0.0340583850225138 [Y0 X1 X4 Y5] +\n",
+      "0.023093664326494255 [Y0 X1 X6 Y7] +\n",
+      "-0.034058385022492754 [Y0 Y1 X2 X3] +\n",
+      "-0.0340583850225138 [Y0 Y1 X4 X5] +\n",
+      "-0.023093664326494255 [Y0 Y1 X6 X7] +\n",
+      "-0.011573113480190928 [Y0 Z1 X2 X4 Z5 Y6] +\n",
+      "-0.011573113480190935 [Y0 Z1 Y2 Y4 Z5 Y6] +\n",
+      "-0.035257520327649984 [Y0 Z1 Y2 X5 Z6 X7] +\n",
+      "-0.035257520327649984 [Y0 Z1 Y2 Y5 Z6 Y7] +\n",
+      "-0.03525752032764998 [Y0 Z1 Z2 X3 X4 Z5 Z6 Y7] +\n",
+      "0.023684406847459046 [Y0 Z1 Z2 X3 X5 Y6] +\n",
+      "0.03525752032764998 [Y0 Z1 Z2 Y3 X4 Z5 Z6 X7] +\n",
+      "0.023684406847459046 [Y0 Z1 Z2 Y3 Y5 Y6] +\n",
+      "-4.046981332494459e-08 [Y0 Z1 Z2 Z3 Z4 Z5 Y6] +\n",
+      "0.14728582382955235 [Z0] +\n",
+      "0.10715401025424418 [Z0 Z1] +\n",
+      "0.0721388704536108 [Z0 Z2] +\n",
+      "0.10619725547610355 [Z0 Z3] +\n",
+      "0.07213887045360384 [Z0 Z4] +\n",
+      "0.10619725547611764 [Z0 Z5] +\n",
+      "0.08409543193051376 [Z0 Z6] +\n",
+      "0.10718909625700801 [Z0 Z7] +\n",
+      "0.023684406847459046 [X1 X2 X4 Z5 Z6 X7] +\n",
+      "0.03525752032764998 [X1 X2 Y5 Y6] +\n",
+      "0.023684406847459046 [X1 Y2 Y4 Z5 Z6 X7] +\n",
+      "-0.03525752032764998 [X1 Y2 Y5 X6] +\n",
+      "-0.035257520327649984 [X1 Z2 X3 X4 Z5 X6] +\n",
+      "-0.035257520327649984 [X1 Z2 X3 Y4 Z5 Y6] +\n",
+      "-0.011573113480190935 [X1 Z2 X3 X5 Z6 X7] +\n",
+      "-0.011573113480190928 [X1 Z2 Y3 Y5 Z6 X7] +\n",
+      "-4.046981332494459e-08 [X1 Z2 Z3 Z4 Z5 Z6 X7] +\n",
+      "0.023684406847459046 [Y1 X2 X4 Z5 Z6 Y7] +\n",
+      "-0.03525752032764998 [Y1 X2 X5 Y6] +\n",
+      "0.023684406847459046 [Y1 Y2 Y4 Z5 Z6 Y7] +\n",
+      "0.03525752032764998 [Y1 Y2 X5 X6] +\n",
+      "-0.011573113480190928 [Y1 Z2 X3 X5 Z6 Y7] +\n",
+      "-0.035257520327649984 [Y1 Z2 Y3 X4 Z5 X6] +\n",
+      "-0.035257520327649984 [Y1 Z2 Y3 Y4 Z5 Y6] +\n",
+      "-0.011573113480190935 [Y1 Z2 Y3 Y5 Z6 Y7] +\n",
+      "-4.046981332494459e-08 [Y1 Z2 Z3 Z4 Z5 Z6 Y7] +\n",
+      "0.14728582382955235 [Z1] +\n",
+      "0.10619725547610355 [Z1 Z2] +\n",
+      "0.0721388704536108 [Z1 Z3] +\n",
+      "0.10619725547611764 [Z1 Z4] +\n",
+      "0.07213887045360384 [Z1 Z5] +\n",
+      "0.10718909625700801 [Z1 Z6] +\n",
+      "0.08409543193051376 [Z1 Z7] +\n",
+      "-0.024298400891924504 [X2 X3 Y4 Y5] +\n",
+      "-0.03827976789253185 [X2 X3 Y6 Y7] +\n",
+      "0.024298400891924504 [X2 Y3 Y4 X5] +\n",
+      "0.03827976789253185 [X2 Y3 Y6 X7] +\n",
+      "0.024298400891924504 [Y2 X3 X4 Y5] +\n",
+      "0.03827976789253185 [Y2 X3 X6 Y7] +\n",
+      "-0.024298400891924504 [Y2 Y3 X4 X5] +\n",
+      "-0.03827976789253185 [Y2 Y3 X6 X7] +\n",
+      "0.02072928326221074 [Z2] +\n",
+      "0.10799421374371414 [Z2 Z3] +\n",
       "0.0818725044895098 [Z2 Z4] +\n",
-      "0.10617090538145493 [Z2 Z5] +\n",
-      "0.07102689631806366 [Z2 Z6] +\n",
-      "0.10930666421058506 [Z2 Z7] +\n",
-      "0.020729283262210414 [Z3] +\n",
-      "0.10617090538145493 [Z3 Z4] +\n",
+      "0.10617090538143431 [Z2 Z5] +\n",
+      "0.07102689631806026 [Z2 Z6] +\n",
+      "0.10930666421059211 [Z2 Z7] +\n",
+      "0.02072928326221073 [Z3] +\n",
+      "0.10617090538143431 [Z3 Z4] +\n",
       "0.0818725044895098 [Z3 Z5] +\n",
-      "0.10930666421058506 [Z3 Z6] +\n",
-      "0.07102689631806366 [Z3 Z7] +\n",
-      "-0.0382797678925214 [X4 X5 Y6 Y7] +\n",
-      "0.0382797678925214 [X4 Y5 Y6 X7] +\n",
-      "0.0382797678925214 [Y4 X5 X6 Y7] +\n",
-      "-0.0382797678925214 [Y4 Y5 X6 X7] +\n",
-      "0.02072928326221017 [Z4] +\n",
-      "0.1079942137436935 [Z4 Z5] +\n",
-      "0.07102689631806369 [Z4 Z6] +\n",
-      "0.10930666421058507 [Z4 Z7] +\n",
-      "0.02072928326221018 [Z5] +\n",
-      "0.10930666421058507 [Z5 Z6] +\n",
-      "0.07102689631806369 [Z5 Z7] +\n",
-      "-0.10711575592668801 [Z6] +\n",
-      "0.11263850647926844 [Z6 Z7] +\n",
-      "-0.1071157559266879 [Z7]\n"
+      "0.10930666421059211 [Z3 Z6] +\n",
+      "0.07102689631806026 [Z3 Z7] +\n",
+      "-0.03827976789251076 [X4 X5 Y6 Y7] +\n",
+      "0.03827976789251076 [X4 Y5 Y6 X7] +\n",
+      "0.03827976789251076 [Y4 X5 X6 Y7] +\n",
+      "-0.03827976789251076 [Y4 Y5 X6 X7] +\n",
+      "0.020729283262210095 [Z4] +\n",
+      "0.10799421374371403 [Z4 Z5] +\n",
+      "0.07102689631806716 [Z4 Z6] +\n",
+      "0.10930666421057791 [Z4 Z7] +\n",
+      "0.020729283262210105 [Z5] +\n",
+      "0.10930666421057791 [Z5 Z6] +\n",
+      "0.07102689631806716 [Z5 Z7] +\n",
+      "-0.10711575592668135 [Z6] +\n",
+      "0.11263850647927055 [Z6 Z7] +\n",
+      "-0.10711575592668124 [Z7]\n"
      ]
     }
    ],
@@ -307,12 +311,6 @@
      "text": [
       "\n",
       "Hamiltonian has 93 terms\n",
-      "\n",
-      "\n",
-      "Number of UCCSD amplitudes: 8 \n",
-      "\n",
-      "\n",
-      "Starting optimization:\n",
       "\n"
      ]
     }
